--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,17 +6,14 @@ logging.config=classpath:logback-spring.xml
 logging.level.com.hr.mapper=debug
 
 #文件上传路径配置
-file.upload.win.root=D:/static/gxdaojia
-file.upload.linux.root=/gxdata/static/gxdaojia
+file.upload.win.root=D:/static/hr
+file.upload.linux.root=/hr/static/hr
 file.upload.img.path=/upload/img
 
 
 #Nginx代理配置
-#nginx.call.img.url=http://img.gxdaojia.com
-#nginx.call.wx.url=http://wx.gxdaojia.com
-#nginx.call.app.url=http://app.gxdaojia.com
 nginx.call.img.url=http://192.168.4.181
-nginx.call.wx.url=http://192.168.4.181:8080/gxdjwx
+nginx.call.wx.url=http://192.168.4.181:8080/hr
 nginx.call.app.url=http://192.168.4.181:8081
 
 #文件上传大小
@@ -49,23 +46,23 @@ spring.redis.password=
 
 #数据库配置
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/qrsoft_gxdaojia?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hr?useUnicode=true&characterEncoding=utf-8&useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=123456
 
-#spring.datasource.url=jdbc:mysql://192.168.3.10:3306/qrsoft_frame?useUnicode=true&characterEncoding=utf-8&useSSL=false
-spring.datasource.url=jdbc:mysql://localhost/qrsoft?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#spring.datasource.url=jdbc:mysql://192.168.3.10:3306/hr?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/hr?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 #spring.datasource.password=123456
 spring.datasource.password=root
 
-#spring.datasource.url=jdbc:mysql://192.168.4.185:3306/qrsoft_kj_demo?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#spring.datasource.url=jdbc:mysql://192.168.4.185:3306/hr?useUnicode=true&characterEncoding=utf-8&useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=1234
 
-#spring.datasource.url=jdbc:mysql://39.104.89.245:3306/qrsoft_gxdaojia?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#spring.datasource.url=jdbc:mysql://39.104.89.245:3306/hr?useUnicode=true&characterEncoding=utf-8&useSSL=false
 #spring.datasource.username=root
-#spring.datasource.password=gxdaojia666
+#spring.datasource.password=hr666
 
 
 
